Added Empresa and tecidos page

--- a/index.html
+++ b/index.html
@@ -7,29 +7,24 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link rel="icon" href="./images/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
-
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
-
     <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
-
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
-
     <link rel="stylesheet" href="css/aos.css" />
-
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
     <div id="overlayer"></div>
     <div class="loader">
@@ -71,52 +66,58 @@
                   class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block"
                 >
                   <li><a href="#home-section" class="nav-link">Home</a></li>
-                  <li><a href="#home-section" class="nav-link">Empresa</a></li>
+                  <li>
+                    <a href="#empresa-section" class="nav-link">Empresa</a>
+                  </li>
                   <li class="has-children">
-                    <a href="#about-section" class="nav-link">Tecidos</a>
+                    <a href="#tecidos-section" class="nav-link">Tecidos</a>
                     <ul class="dropdown">
                       <li>
-                        <a href="#team-section" class="nav-link"
+                        <a href="#tecidos-confecao-section" class="nav-link"
                           >Tecidos de Confeção e Moda</a
                         >
                       </li>
                       <li>
-                        <a href="#pricing-section" class="nav-link"
+                        <a
+                          href="#complementos-confecao-section"
+                          class="nav-link"
                           >Complementos de Confeção e Moda</a
                         >
                       </li>
                       <li>
-                        <a href="#pricing-section" class="nav-link"
+                        <a href="#servicos-confecao-section" class="nav-link"
                           >Serviços de Confeção</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li class="has-children">
-                    <a href="#about-section" class="nav-link">Decoração</a>
+                    <a href="#decoracao-section" class="nav-link">Decoração</a>
                     <ul class="dropdown">
                       <li>
-                        <a href="#team-section" class="nav-link"
+                        <a href="#tecidos-decoracao-section" class="nav-link"
                           >Tecidos de Decoração</a
                         >
                       </li>
                       <li>
-                        <a href="#pricing-section" class="nav-link"
+                        <a href="#artigos-decoracao-section" class="nav-link"
                           >Artigos de Decoração</a
                         >
                       </li>
                       <li>
-                        <a href="#pricing-section" class="nav-link"
+                        <a
+                          href="#complementos-acessorios-section"
+                          class="nav-link"
                           >Complementos e Acessórios</a
                         >
                       </li>
                       <li>
-                        <a href="#pricing-section" class="nav-link"
+                        <a href="#servicos-decoracao-section" class="nav-link"
                           >Serviços de Decoração</a
                         >
                       </li>
                       <li>
-                        <a href="#pricing-section" class="nav-link"
+                        <a href="#hoteis-instituicoes-section" class="nav-link"
                           >Hóteis e Instituições</a
                         >
                       </li>
@@ -126,7 +127,7 @@
                     <a href="#portfolio-section" class="nav-link">Portfolio</a>
                   </li>
                   <li>
-                    <a href="#contact-section" class="nav-link">Contactos</a>
+                    <a href="#contactos-section" class="nav-link">Contactos</a>
                   </li>
                 </ul>
               </nav>
@@ -153,10 +154,12 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-8 mt-lg-5 text-center">
-              <h1 class="text-uppercase" data-aos="fade-up">Bem-Vindo</h1>
+              <h1 class="text-uppercase" data-aos="fade-up">
+                Beatriz dos Panos
+              </h1>
               <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">
-                Beatriz dos Panos – a sua loja para tecidos a metro e muito mais
-                com 40 anos de experiência em tecidos de confeção e decoração!
+                Bem-vindo à sua loja para tecidos a metro e muito mais com 50
+                anos de experiência em tecidos de confeção e decoração!
               </p>
               <div data-aos="fade-up" data-aos-delay="100">
                 <a
@@ -169,24 +172,24 @@
           </div>
         </div>
 
-        <a href="#about-section" class="mouse smoothscroll">
+        <a href="#empresa-section" class="mouse smoothscroll">
           <span class="mouse-icon">
             <span class="mouse-wheel"></span>
           </span>
         </a>
       </div>
 
-      <div class="site-section cta-big-image" id="about-section">
+      <div class="site-section cta-big-image" id="empresa-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade">
-              <h2 class="section-title mb-3">About Us</h2>
+              <h2 class="section-title mb-3">Empresa</h2>
             </div>
           </div>
           <div class="row">
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <figure class="circle-bg">
-                <img src="images/hero_1.jpg" alt="Image" class="img-fluid" />
+                <img src="images/empresa.jpg" alt="Image" class="img-fluid" />
               </figure>
             </div>
             <div
@@ -195,27 +198,35 @@
               data-aos-delay="100"
             >
               <div class="mb-4">
-                <h3 class="h3 mb-4 text-black">For the next great business</h3>
+                <h3 class="h3 mb-4 text-black">Beatriz dos Panos</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  tempora cumque eligendi in nostrum labore omnis quaerat.
+                  No mercado de comércio de tecidos desde 1970, somos uma
+                  empresa de raiz familiar que cresceu graças empenho e carisma
+                  da sua fundadora, Beatriz Madalena, que desde sempre procurou
+                  satisfazer as necessidades do mercado do retalho têxtil.
+                  Dispomos de um espaço com 1300m2 divididos por três pisos,
+                  onde pode encontrar uma enorme variedade de produtos e
+                  acessórios nas áreas de tecidos, têxteis lar e decoração e de
+                  uma equipa de profissionais, prontos a recebê-lo e a
+                  esclarecer todas as suas dúvidas.
                 </p>
-              </div>
-
-              <div class="mb-4">
-                <ul class="list-unstyled ul-check success">
-                  <li>Officia quaerat eaque neque</li>
-                  <li>Possimus aut consequuntur incidunt</li>
-                  <li>Lorem ipsum dolor sit amet</li>
-                  <li>Consectetur adipisicing elit</li>
-                </ul>
+                <p>
+                  Conosco encontrará um espaço privilegiado com a oferta de uma
+                  vasta panóplia de artigos, onde irá beneficiar de um
+                  atendimento personalizado. O profissionalismo e rigor dos seus
+                  serviços e a diversidade e qualidade dos seus produtos faz da
+                  Beatriz dos Panos um local de referência, onde todos os
+                  clientes satisfazem as suas necessidades, com uma excelente
+                  relação qualidade/preço. A satisfação do cliente é a nossa
+                  prioridade!
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <section class="site-section">
+      <section class="site-section" id="tecidos-section">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-7 text-center">
@@ -224,22 +235,17 @@
                 data-aos="fade-up"
                 data-aos-delay=""
               >
-                Our Features
+                Tecidos
               </h2>
-              <p class="lead" data-aos="fade-up" data-aos-delay="100">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
-                minima neque tempora reiciendis.
-              </p>
             </div>
           </div>
 
           <div class="row">
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <div class="owl-carousel slide-one-item-alt">
-                <img src="images/slide_1.jpg" alt="Image" class="img-fluid" />
-                <img src="images/slide_2.jpg" alt="Image" class="img-fluid" />
-                <img src="images/slide_3.jpg" alt="Image" class="img-fluid" />
-                <img src="images/slide_4.jpg" alt="Image" class="img-fluid" />
+                <img src="images/slide1.jpg" alt="Image" class="img-fluid" />
+                <img src="images/slide2.jpg" alt="Image" class="img-fluid" />
+                <img src="images/slide3.jpg" alt="Image" class="img-fluid" />
               </div>
               <div class="custom-direction">
                 <a href="#" class="custom-prev"
@@ -256,66 +262,42 @@
             >
               <div class="owl-carousel slide-one-item-alt-text">
                 <div>
-                  <h2 class="section-title mb-3">Minimal and Modern Design</h2>
+                  <h2 class="section-title mb-3">Tecidos de Confeção e Moda</h2>
                   <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Na nossa loja pode encontrar uma grande variedade de tecidos
+                    a metro de alta qualidade para todos os projetos de costura
+                    a preços acessíveis, que o vão ajudar a libertar a sua
+                    criatividade…
                   </p>
-                  <p>
-                    Est qui eos quasi ratione nostrum excepturi id recusandae
-                    fugit omnis ullam pariatur itaque nisi voluptas impedit Quo
-                    suscipit omnis iste velit maxime.
-                  </p>
-
-                  <p>
-                    <a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a>
-                  </p>
-                </div>
-                <div>
-                  <h2 class="section-title mb-3">Do things with love</h2>
-                  <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  </p>
-                  <p>
-                    Est qui eos quasi ratione nostrum excepturi id recusandae
-                    fugit omnis ullam pariatur itaque nisi voluptas impedit Quo
-                    suscipit omnis iste velit maxime.
-                  </p>
-
-                  <p>
-                    <a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a>
-                  </p>
-                </div>
-                <div>
-                  <h2 class="section-title mb-3">Take your business online</h2>
-                  <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  </p>
-                  <p>
-                    Est qui eos quasi ratione nostrum excepturi id recusandae
-                    fugit omnis ullam pariatur itaque nisi voluptas impedit Quo
-                    suscipit omnis iste velit maxime.
-                  </p>
-
-                  <p>
-                    <a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a>
-                  </p>
+                  <a href="#tecidos-confecao-section" class="btn btn-primary"
+                    >Ver mais</a
+                  >
                 </div>
                 <div>
                   <h2 class="section-title mb-3">
-                    4 Our Dedicated Professionals
+                    Complementos de Confeção e Moda
                   </h2>
                   <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Se procura artigos e acessórios de costura, chegou ao sítio
+                    certo.
                   </p>
-                  <p>
-                    Est qui eos quasi ratione nostrum excepturi id recusandae
-                    fugit omnis ullam pariatur itaque nisi voluptas impedit Quo
-                    suscipit omnis iste velit maxime.
+                  <a
+                    href="#complementos-confecao-section"
+                    class="btn btn-primary"
+                    >Ver mais</a
+                  >
+                </div>
+                <div>
+                  <h2 class="section-title mb-3">Serviços de Confeção</h2>
+                  <p class="lead">
+                    Se imagina ver-se naquele fato ou vestido que lhe ficou na
+                    retina numa revista de moda que folheou ou se necessita de
+                    um traje ou fardamento para uma ocasião específica, tudo o
+                    que tem que fazer é vir falar conosco.
                   </p>
-
-                  <p>
-                    <a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a>
-                  </p>
+                  <a href="#servicos-confecao-section" class="btn btn-primary"
+                    >Ver mais</a
+                  >
                 </div>
               </div>
             </div>
@@ -323,7 +305,7 @@
         </div>
       </section>
 
-      <section class="site-section border-bottom" id="team-section">
+      <section class="site-section border-bottom" id="complementos-confecao-section">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-8 text-center">
@@ -616,7 +598,7 @@
         </div>
       </section>
 
-      <section class="site-section" id="portfolio-section">
+      <section class="site-section" id="tecidos-confecao-section">
         <div class="container">
           <div class="row mb-3">
             <div class="col-12 text-center" data-aos="fade">
@@ -787,7 +769,7 @@
 
       <section
         class="site-section border-bottom bg-light"
-        id="services-section"
+        id="servicos-confecao-section"
       >
         <div class="container">
           <div class="row mb-5">
@@ -913,7 +895,7 @@
 
       <section
         class="site-section testimonial-wrap"
-        id="testimonials-section"
+        id="decoracao-section"
         data-aos="fade"
       >
         <div class="container">
@@ -1030,7 +1012,7 @@
         </div>
       </section>
 
-      <section class="site-section bg-light" id="pricing-section">
+      <section class="site-section bg-light" id="tecidos-decoracao-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade-up">
@@ -1108,7 +1090,7 @@
             </div>
           </div>
 
-          <div class="row site-section" id="faq-section">
+          <div class="row site-section" id="artigos-decoracao-section">
             <div class="col-12 text-center" data-aos="fade">
               <h2 class="section-title">Frequently Ask Questions</h2>
             </div>
@@ -1197,7 +1179,7 @@
         </div>
       </section>
 
-      <section class="site-section" id="about-section">
+      <section class="site-section" id="complementos-acessorios-section">
         <div class="container">
           <div class="row mb-5">
             <div
@@ -1258,7 +1240,7 @@
         </div>
       </section>
 
-      <section class="site-section" id="blog-section">
+      <section class="site-section" id="servicos-decoracao-section">
         <div class="container">
           <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade">
@@ -1348,7 +1330,7 @@
 
       <section
         class="site-section bg-light"
-        id="contact-section"
+        id="hoteis-instituicoes-section"
         data-aos="fade"
       >
         <div class="container">
@@ -1537,7 +1519,6 @@
       </footer>
     </div>
     <!-- .site-wrap -->
-
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/popper.min.js"></script>
@@ -1549,7 +1530,6 @@
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/jquery.sticky.js"></script>
     <script src="js/isotope.pkgd.min.js"></script>
-
     <script src="js/main.js"></script>
   </body>
 </html>
