--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               </p>
               <div data-aos="fade-up" data-aos-delay="100">
                 <a
-                  href="#contact-section"
+                  href="#contactos-section"
                   class="btn smoothscroll btn-primary mr-2 mb-2"
                   >Contacte-nos</a
                 >
@@ -179,52 +179,164 @@
         </a>
       </div>
 
-      <div class="site-section cta-big-image" id="empresa-section">
-        <div class="container">
-          <div class="row mb-5">
-            <div class="col-12 text-center" data-aos="fade">
-              <h2 class="section-title mb-3">Empresa</h2>
+      <section class="site-section" id="empresa-section">
+        <div class="cta-big-image">
+          <div class="container">
+            <div class="row mb-5">
+              <div class="col-12 text-center" data-aos="fade">
+                <h2 class="section-title mb-3">Empresa</h2>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-              <figure class="circle-bg">
-                <img src="images/empresa.jpg" alt="Image" class="img-fluid" />
-              </figure>
+            <div class="row">
+              <div
+                class="col-lg-auto mb-auto"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                <div class="mb-4">
+                  <p>
+                    No mercado de comércio de tecidos desde 1970, somos uma
+                    empresa de raiz familiar que cresceu graças empenho e
+                    carisma da sua fundadora, Beatriz Madalena, que desde sempre
+                    procurou satisfazer as necessidades do mercado do retalho
+                    têxtil. Dispomos de um espaço com 1300m2 divididos por três
+                    pisos, onde pode encontrar uma enorme variedade de produtos
+                    e acessórios nas áreas de tecidos, têxteis lar e decoração e
+                    de uma equipa de profissionais, prontos a recebê-lo e a
+                    esclarecer todas as suas dúvidas.
+                  </p>
+                  <p>
+                    Conosco encontrará um espaço privilegiado com a oferta de
+                    uma vasta panóplia de artigos, onde irá beneficiar de um
+                    atendimento personalizado. O profissionalismo e rigor dos
+                    seus serviços e a diversidade e qualidade dos seus produtos
+                    faz da Beatriz dos Panos um local de referência, onde todos
+                    os clientes satisfazem as suas necessidades, com uma
+                    excelente relação qualidade/preço. A satisfação do cliente é
+                    a nossa prioridade!
+                  </p>
+                </div>
+              </div>
             </div>
-            <div
-              class="col-lg-5 ml-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="mb-4">
-                <h3 class="h3 mb-4 text-black">Beatriz dos Panos</h3>
-                <p>
-                  No mercado de comércio de tecidos desde 1970, somos uma
-                  empresa de raiz familiar que cresceu graças empenho e carisma
-                  da sua fundadora, Beatriz Madalena, que desde sempre procurou
-                  satisfazer as necessidades do mercado do retalho têxtil.
-                  Dispomos de um espaço com 1300m2 divididos por três pisos,
-                  onde pode encontrar uma enorme variedade de produtos e
-                  acessórios nas áreas de tecidos, têxteis lar e decoração e de
-                  uma equipa de profissionais, prontos a recebê-lo e a
-                  esclarecer todas as suas dúvidas.
-                </p>
-                <p>
-                  Conosco encontrará um espaço privilegiado com a oferta de uma
-                  vasta panóplia de artigos, onde irá beneficiar de um
-                  atendimento personalizado. O profissionalismo e rigor dos seus
-                  serviços e a diversidade e qualidade dos seus produtos faz da
-                  Beatriz dos Panos um local de referência, onde todos os
-                  clientes satisfazem as suas necessidades, com uma excelente
-                  relação qualidade/preço. A satisfação do cliente é a nossa
-                  prioridade!
-                </p>
+            <div class="container">
+              <div class="row mb-5">
+                <div class="col-12 text-center" data-aos="fade">
+                  <h2 class="section-title mb-3 o-que-fazemos">
+                    O que fazemos
+                  </h2>
+                </div>
+              </div>
+              <div class="row align-items-stretch">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+                  <div class="unit-4">
+                    <div class="unit-4-icon mr-4">
+                      <span class="text-primary flaticon-startup"></span>
+                    </div>
+                    <div>
+                      <h3>Lorem ipsum</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis quis molestiae vitae eligendi at.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                >
+                  <div class="unit-4">
+                    <div class="unit-4-icon mr-4">
+                      <span class="text-primary flaticon-graphic-design"></span>
+                    </div>
+                    <div>
+                      <h3>Lorem ipsum</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis quis molestiae vitae eligendi at.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                >
+                  <div class="unit-4">
+                    <div class="unit-4-icon mr-4">
+                      <span class="text-primary flaticon-settings"></span>
+                    </div>
+                    <div>
+                      <h3>Lorem ipsum</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis quis molestiae vitae eligendi at.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div
+                  class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+                  data-aos="fade-up"
+                  data-aos-delay=""
+                >
+                  <div class="unit-4">
+                    <div class="unit-4-icon mr-4">
+                      <span class="text-primary flaticon-idea"></span>
+                    </div>
+                    <div>
+                      <h3>Lorem ipsum</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis quis molestiae vitae eligendi at.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                >
+                  <div class="unit-4">
+                    <div class="unit-4-icon mr-4">
+                      <span class="text-primary flaticon-smartphone"></span>
+                    </div>
+                    <div>
+                      <h3>Lorem ipsum</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis quis molestiae vitae eligendi at.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                >
+                  <div class="unit-4">
+                    <div class="unit-4-icon mr-4">
+                      <span class="text-primary flaticon-head"></span>
+                    </div>
+                    <div>
+                      <h3>Lorem ipsum</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis quis molestiae vitae eligendi at.
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <section class="site-section" id="tecidos-section">
         <div class="container">
@@ -305,7 +417,10 @@
         </div>
       </section>
 
-      <section class="site-section border-bottom" id="complementos-confecao-section">
+      <section
+        class="site-section border-bottom"
+        id="complementos-confecao-section"
+      >
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-8 text-center">
@@ -1330,7 +1445,7 @@
 
       <section
         class="site-section bg-light"
-        id="hoteis-instituicoes-section"
+        id="contactos-section"
         data-aos="fade"
       >
         <div class="container">
@@ -1517,6 +1632,11 @@
           </div>
         </div>
       </footer>
+      <div class="arrowScrollUp">
+        <div class="arrow">
+          <img class="arrowImg" src="./images/up.svg" alt="" />
+        </div>
+      </div>
     </div>
     <!-- .site-wrap -->
     <script src="js/jquery-3.3.1.min.js"></script>
