--- a/index.html
+++ b/index.html
@@ -154,20 +154,18 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-8 mt-lg-5 text-center">
-              <h1 class="text-uppercase" data-aos="fade-up">
+              <h1 class="text-uppercase">
                 Beatriz dos Panos
               </h1>
-              <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">
+              <p class="mb-5 desc">
                 Bem-vindo à sua loja para tecidos a metro e muito mais com 50
                 anos de experiência em tecidos de confeção e decoração!
               </p>
-              <div data-aos="fade-up" data-aos-delay="100">
-                <a
-                  href="#contactos-section"
-                  class="btn smoothscroll btn-primary mr-2 mb-2"
-                  >Contacte-nos</a
-                >
-              </div>
+              <a
+                href="#contactos-section"
+                class="btn smoothscroll btn-primary mr-2 mb-2"
+                >Contacte-nos</a
+              >
             </div>
           </div>
         </div>
