Image position changed

--- a/index.html
+++ b/index.html
@@ -343,14 +343,7 @@
       <section class="site-section" id="complementos-confecao-section">
         <div class="container">
           <div class="row containerRow">
-            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-              <img src="images/slide2.jpg" alt="Image" class="img-fluid" />
-            </div>
-            <div
-              class="col-lg-5 ml-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <h3 class="h3 mb-4 text-black">
                   Complementos de Confeção e Moda
@@ -372,6 +365,9 @@
                   de costura que ajudarão a concretizar as suas ideias!
                 </p>
               </div>
+            </div>
+            <div class="col-lg-6 ml-auto" data-aos="fade-up" data-aos-delay="">
+              <img src="images/slide2.jpg" alt="Image" class="img-fluid" />
             </div>
           </div>
         </div>
