Primary buttons changed on active state

--- a/index.html
+++ b/index.html
@@ -405,15 +405,155 @@
         </div>
       </section>
 
+      <section
+        class="site-section border-bottom bg-light"
+        id="decoracao-section"
+      >
+        <div class="container">
+          <div class="row mb-5">
+            <div class="col-12 text-center" data-aos="fade">
+              <h2 class="section-title mb-3">Decoração</h2>
+            </div>
+          </div>
+          <div class="row align-items-stretch">
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+              <div class="unit-4">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary flaticon-startup"></span>
+                </div>
+                <div>
+                  <h3>Tecidos de Decoração</h3>
+                  <p>
+                    Pensar numa solução de conforto completa e criativa na sua
+                    casa ou no seu negócio é tão simples como vir visitar-nos e
+                    escolher os seus tecidos e artigos preferidos com a ajuda da
+                    nossa equipa de profissionais...
+                  </p>
+                  <p>
+                    <a
+                      href="#tecidos-decoracao-section"
+                      class="saberMainButton smoothscroll"
+                      >Saber Mais</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="unit-4">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary flaticon-graphic-design"></span>
+                </div>
+                <div>
+                  <h3>Artigos de Decoração</h3>
+                  <p>
+                    Com os nossos artigos têxteis para o lar, pode acrescentar
+                    cores e texturas irresistíveis à sua casa, escritorio, loja
+                    ou empresa...
+                  </p>
+                  <p>
+                    <a
+                      href="#artigos-decoracao-section"
+                      class="saberMainButton smoothscroll"
+                      >Saber Mais</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="unit-4">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary flaticon-settings"></span>
+                </div>
+                <div>
+                  <h3>Complementos e Acessórios</h3>
+                  <p>
+                    Na nossa loja encontra todos os artigos e complementos para
+                    a confeção dos artigos para a sua casa ou para lhes dar um
+                    toque mais pessoal, tais como fitas e passamanarias,
+                    cordões, franjas, galões ou ainda rendas…
+                  </p>
+                  <p>
+                    <a
+                      href="#complementos-acessorios-section"
+                      class="saberMainButton smoothscroll"
+                      >Saber Mais</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay=""
+            >
+              <div class="unit-4">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary flaticon-idea"></span>
+                </div>
+                <div>
+                  <h3>Serviços de Decoração</h3>
+                  <p>
+                    Na Beatriz dos Panos dispõe de serviços de decorações
+                    personalizadas e aconselhamento, confeção e montagem de
+                    artigos para o seu lar ou para o seu negócio…
+                  </p>
+                  <p>
+                    <a
+                      href="#servicos-decoracao-section"
+                      class="saberMainButton smoothscroll"
+                      >Saber Mais</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-4 mb-4 mb-lg-4"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="unit-4">
+                <div class="unit-4-icon mr-4">
+                  <span class="text-primary flaticon-smartphone"></span>
+                </div>
+                <div>
+                  <h3>Hotéis e Instituições</h3>
+                  <p>
+                    A imagem de um empreendimento turístico ou de uma empresa
+                    deve refletir uma organização de sucesso de forma a ganhar
+                    terreno num mercado pautado pela concorrência feroz
+                    provocada pela conjuntura adversa do nosso mercado
+                    interno...
+                  </p>
+                  <p>
+                    <a
+                      href="#hoteis-instituicoes-section"
+                      class="saberMainButton smoothscroll"
+                      >Saber Mais</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer class="site-footer">
         <div class="footerContent">
-          Copyright &copy;
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          All rights reserved | Template by
-          <div class="author">Colorlib</div>
-          | Code changes by
+          Website made by
           <div class="author">João Lopes</div>
         </div>
       </footer>
