Empresa and Equipa done

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <img
                   src="./assets/SVG/logo.svg"
                   alt="logo"
-                  style="width: 15vh; margin-top: 50px;"
+                  style="width: 15vh; margin-top: 50px"
                 />
               </p>
               <p>
@@ -200,11 +200,7 @@
             </div>
           </div>
           <div class="row">
-            <div
-              class="col-lg-auto mb-auto"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="col-lg-5 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-4">
                 <p>
                   No mercado de comércio de tecidos desde 1970, somos uma
@@ -213,14 +209,34 @@
                   satisfazer as necessidades do mercado do retalho têxtil.
                   Dispomos de um espaço com 1300m2 divididos por três pisos,
                   onde pode encontrar uma enorme variedade de produtos e
-                  acessórios nas áreas de tecidos, têxteis lar e decoração e de
-                  uma equipa de profissionais, prontos a recebê-lo e a
-                  esclarecer todas as suas dúvidas.
+                  acessórios nas áreas de tecidos, têxteis lar e decoração.
                 </p>
+              </div>
+            </div>
+            <div class="col-lg-6 ml-auto" data-aos="fade-up" data-aos-delay="">
+              <img src="images/empresa.jpg" alt="Image" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="site-section" id="equipa-section">
+        <div class="container">
+          <div class="row mb-5">
+            <div class="col-12 text-center" data-aos="fade">
+              <h2 class="section-title mb-3">Equipa</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+              <img src="images/equipa.jpg" alt="Image" class="img-fluid" />
+            </div>
+            <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="">
+              <div class="mb-4">
                 <p>
-                  Conosco encontrará um espaço privilegiado com a oferta de uma
-                  vasta panóplia de artigos, onde irá beneficiar de um
-                  atendimento personalizado. O profissionalismo e rigor dos seus
+                  Temos uma equipa de profissionais que lhe irão recebê-lo e
+                  prestar-lhe um atendimento personalizado, prontos a esclarecer
+                  todas as suas dúvidas. O profissionalismo e rigor dos seus
                   serviços e a diversidade e qualidade dos seus produtos faz da
                   Beatriz dos Panos um local de referência, onde todos os
                   clientes satisfazem as suas necessidades, com uma excelente
